--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="va">Tem Vale Alimentação?</string>
     <string name="vr">Tem Vale Refeição?</string>
     <string name="calcular">Calcular</string>
+    <string name="limpar">Limpar</string>
     <string name="sim">Sim</string>
     <string name="não">Não</string>
     <string name="standard">Standard</string>
@@ -15,9 +16,8 @@
     <string name="mester">Master</string>
     <string name="result">Seu Salário Líquido é :</string>
     <string name="resultado"> o sálario é %1$.2f</string>
-    <string name="porcentagem">O desconto é</string>
-    <string name="porcent">O desconto foi de %1$.2f</string>
-
+    <string name="porcentagem">O Desconto é :</string>
+    <string name="porcent">O desconto foi de %1$.2f%%</string>
 
 
 </resources>
